items list fix gap

--- a/src/app/features/thresholds/components/grade-list/grade-list.scss
+++ b/src/app/features/thresholds/components/grade-list/grade-list.scss
@@ -58,10 +58,6 @@
   gap: 16px;
 }
 
-.grade-items.full-width-grid {
-  gap: 16px;
-}
-
 @media (max-width: 768px) {
   .grade-items {
     flex: none;
